# GameEngine

./: .gitmodules  CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.c
include/: logger.h
lib/: CMakeLists.txt
lib/include/: input.h  instance.h  logger.h  render.h  result.h  sprite.h  types.h  window.h
lib/private/: buffer_management.h  debug_messenger.h  device_management.h  instance_private.h  m_utils.h  pipeline_management.h  render_management.h  render_object.h  result_utils.h  shader_management.h  sprite_private.h  swap_chain_management.h  uniform_management.h  vk_debug_messenger_helper.h  vk_device_management.h  vk_instance_helper.h  vk_swap_chain_management.h  vk_utils.h  vulkan.h  vulkan_management.h  window_private.h
lib/shaders/: compile.sh
lib/shaders/basic/: shader.frag  shader.vert  vert.spv
lib/src/: buffer_management.c  input.c  instance.c  logger.c  pipeline_management.c  render.c  render_management.c  render_object.c  result.c  shader_management.c  sprite.c  uniform_management.c  vk_debug_messenger_helper.c  vk_device_management.c  vk_instance_helper.c  vk_swap_chain_management.c  vk_utils.c  vulkan.c  window.c
lib/src/private/: buffer_management.c  debug_messenger.c  device_management.c  m_utils.c  pipeline_management.c  render_management.c  shader_management.c  swap_chain_management.c  uniform_management.c  vulkan_management.c
src/: main.c
